--- a/package.json
+++ b/package.json
@@ -9,14 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
+    "multer": "^1.4.5-lts.1",
     "next": "13.2.4",
+    "pdf-parse": "^1.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/multer": "^1.4.7",
     "@types/node": "18.15.11",
+    "@types/pdf-parse": "^1.1.1",
     "@types/react": "18.0.31",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "true10.4.14",
