--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.3.4",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
+    "jspdf": "true2.5.1",
     "multer": "^1.4.5-lts.1",
     "next": "13.2.4",
     "pdf-parse": "^1.1.1",
